Changelog
=========

1.7-dev0 - (unreleased)
---------------------------
* Bugfix: Only show events with no tag or subject in the main view
  [valipod refs #125896]

1.6 - (2020-10-23)
---------------------------
* Change: Fix checking edit and delete permissions on the eionet planner calendar
  [valipod]

1.5 - (2020-10-22)
---------------------------
* fix calendar view permission [valipod]

1.4 - (2020-10-21)
---------------------------
* Feature: add view for collective.js.fullcalendar
  [valipod]

1.3 - (2020-05-13)
---------------------------
* Change: Tests and Linters
  [valipod]

1.2 - (2020-03-03)
---------------------------
* Change: Add jenkins badges
  [valentinab25]

1.1 - (2020-02-26)
---------------------------
* Feature: updated Jenkins pipeline
  [alecghica refs #110159]

1.0 - (2020-02-14)
---------------------------
* Change: Implement automatic release [valentinab25]

* Feature: added support for Python 3 and Plone 5.2
  [iulianpetchesi, alecghica refs #110155]
  
* Apply custom style for eionet
  [krisztina]

* Add setup.py
  [krisztina]

* Initial commit
  [krisztina]