@@ -1,8 +1,9 @@
 Changelog
 =========
-
 1.7-dev0 - (unreleased)
 ---------------------------
+* Feature: Support recurring events in the fullcalendar view
+  [valipod refs #125898]
 * Bugfix: Only show events with no tag or subject in the main view
   [valipod refs #125896]
 
